BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/Expense_Header_vod__c.object
<CustomObject>
    <description>Aggregates details of an expense line, such as the payee, the person who incurred the expense, and the payment status. Represents an invoice.</description>
    <fields>
        <fullName>Activity_Agreement_HCPTS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Incurred_Expense_Speaker_vod__r.Event_Speaker_Contract_HCPTS__c ,&apos;Activity Agreement&apos;)</formula>
        <label>Activity Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_vod__c</fullName>
        <description>Actual Expense.</description>
        <inlineHelpText>Updated by SAP in funding currency</inlineHelpText>
        <label>Actual Amount in Funding Currency</label>
        <summarizedField>Expense_Line_vod__c.Actual_vod__c</summarizedField>
        <summaryForeignKey>Expense_Line_vod__c.Expense_Header_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed_Requested_Currency_HCPTS__c</fullName>
        <description>Rollup summary of Committed Amount in Requested Currency</description>
        <label>Committed Amount in Requested Currency</label>
        <summarizedField>Expense_Line_vod__c.Committed_Amount_in_Requested_HCPTS__c</summarizedField>
        <summaryForeignKey>Expense_Line_vod__c.Expense_Header_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed_vod__c</fullName>
        <description>Committed expense.</description>
        <inlineHelpText>Updated by SAP in funding currency</inlineHelpText>
        <label>Committed Amount in Funding Currency</label>
        <summarizedField>Expense_Line_vod__c.Committed_vod__c</summarizedField>
        <summaryForeignKey>Expense_Line_vod__c.Expense_Header_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company_Code_HCPTS__c</fullName>
        <formula>Event_vod__r.Inherited_Budget_Need_HCPTS__r.Company_Code_HCPTS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Invoice_Group__c</fullName>
        <formula>&quot;Invoice-&quot; + TEXT(Payee_Vendor_vod__r.Country_vod__r.Country_Name_vod__c) + &quot;-&quot; + Payee_Vendor_vod__r.Preferred_Language_HCPTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Invoice Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Party_Name_2_HCPTS__c</fullName>
        <formula>Payee_Vendor_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Code_HCPTS__c</fullName>
        <formula>Event_vod__r.Inherited_Budget_Need_HCPTS__r.Cost_Center_Code_HCPTS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The country that the expense is associated with.</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipName>Expense_Header_Country_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_HCTPS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+CreatedById, CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(DAY(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_HCPTS__c</fullName>
        <formula>TEXT(Event_vod__r.Inherited_Budget_Need_HCPTS__r.Currency_HCPTS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type_HCPTS__c</fullName>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice - Hourly Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice - Fixed Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice - Reimbursable Expenses Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Canceled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked automatically if the associated activity is canceled.</description>
        <label>Event Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Recordtype_Dev_Name_Simple_HCPTS__c</fullName>
        <formula>Event_vod__r.RecordType.DeveloperName</formula>
        <label>Event Recordtype Dev Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event that the expense is associated with.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expense_Header_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Line_Items_Number_HCPTS__c</fullName>
        <description>Rollup Summary- Number of Expense Line Items</description>
        <label># of Expense Line Items</label>
        <summaryForeignKey>Expense_Line_vod__c.Expense_Header_vod__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>ID of the Expense Header</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Generate_Invoice_Validation_HCPTS__c</fullName>
        <formula>If(
  OR(
     ISBLANK(Purchase_Order_Number__c),
     ISBLANK(Vendor_ID_2_HCPTS__c),
     AND(
       NOT(ISPICKVAL(Status_vod__c ,&quot;PO Created&quot;)),
       NOT(ISPICKVAL(Status_vod__c ,&quot;PO Updated&quot;))
     )
  )
  ,
  &quot;Requirements not met&quot;
  ,
  &quot;Requirements met&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Invoice Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice__c</fullName>
        <description>+ IF( ISPICKVAL( Document_Type_HCPTS__c , &quot;Invoice for Fees - Fixed&quot;) , &quot;a4zZ00000000SZE,a4zZ00000000SfI&quot;, &quot;a4zZ00000000S9q&quot;)</description>
        <formula>HYPERLINK( 
&quot;https://composer.congamerge.com&quot; + 
&quot;?sessionId=&quot; +  $Api.Session_ID +
&quot;&amp;serverUrl=&quot; +  $Api.Partner_Server_URL_290 + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;CurrencyCulture=de-DE&quot; + 

&quot;&amp;TemplateGroup=&quot; + Conga_Invoice_Group__c +
&quot;&amp;CongaEmailTemplateGroup=none&quot; +
&quot;&amp;SelectTemplates=2&quot; + 
&quot;&amp;DefaultPDF=1&quot; + 
&quot;&amp;DC=&quot; + IF(Generate_Invoice_Validation_HCPTS__c = &quot;Requirements met&quot;,&quot;0&quot;,&quot;1&quot;) +
&quot;&amp;DCL=&quot; + $Label.VPROF_Invoice_Error +
&quot;&amp;DS3=1&quot; +

&quot;&amp;QueryId=[Event]&quot; + $Setup.Conga_and_Echosign_Ids__c.Expense_Invoice_Event__c + &quot;?pv0=&quot; +   Event_vod__r.Id  +
&quot;,[Speaker]&quot; + $Setup.Conga_and_Echosign_Ids__c.Expense_Invoice_Speaker__c + &quot;?pv0=&quot; +  Incurred_Expense_Speaker_vod__r.Id +
&quot;,[Fees]&quot; + $Setup.Conga_and_Echosign_Ids__c.Expense_Invoice_Fees__c + &quot;?pv0=&quot; +  Incurred_Expense_Speaker_vod__r.Event_Speaker_Contract_HCPTS__r.Id + &quot;,[ContractParty]&quot; + $Setup.Conga_and_Echosign_Ids__c.Expense_Invoice_Contract_Party__c + &quot;?pv0=&quot; +  Payee_Vendor_vod__r.Id  + &quot;,[ExpLines]&quot; + $Setup.Conga_and_Echosign_Ids__c.Expense_Invoice_Exp_Lines__c + &quot;?pv0=&quot; +  Id  + &quot;,[ActAgreement]&quot; +  $Setup.Conga_and_Echosign_Ids__c.Expense_Invoice_Act_Agreement__c  + &quot;?pv0=&quot; + Id +
&quot;&amp;SC0=1&quot; + 
&quot;&amp;AC0=1&quot; + 
&quot;&amp;SC1=Attachments&quot; + 
&quot;&amp;DS7Preview=1&quot; +
&quot;&amp;DS7=0&quot; +
&quot;&amp;OFN=Activity+Invoice+for+&quot;  +
SUBSTITUTE(
  SUBSTITUTE(
       SUBSTITUTE(
           SUBSTITUTE(
               SUBSTITUTE(
                   SUBSTITUTE(
                       SUBSTITUTE(
                           SUBSTITUTE(
                               SUBSTITUTE(
                                   Payee_Vendor_vod__r.Name,
                                   &quot;#&quot;,
                                   &quot;&quot;),
                               &quot;$&quot;,
                               &quot;&quot;),
                           &quot;%&quot;,
                           &quot;&quot;),
                       &quot;&amp;&quot;,
                       &quot;&quot;),
                   &quot;\\&quot;,
                   &quot;&quot;),
               &quot;?&quot;,
               &quot;&quot;),
           &quot;/&quot;,
           &quot;&quot;),
       &quot;!&quot;,
       &quot;&quot;),
    &quot;*&quot;,
&quot;&quot;)

, &quot;Generate Invoice&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that incurred an expense.</description>
        <label>Incurred Expense (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Incurred_Expense_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The attendee that incurred an expense</description>
        <label>Incurred Expense (Attendee)</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipName>Incurred_Expense_Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Service Provider that incurred an expense</description>
        <label>Incurred Expense (Service Provider)</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipName>Incurred_Expense_Speaker_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team member that incurred an expense</description>
        <label>Incurred Expense (Team Member)</label>
        <referenceTo>EM_Event_Team_Member_vod__c</referenceTo>
        <relationshipName>Incurred_Expense_Team_Member_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Vendor_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor that incurred an expense</description>
        <label>Incurred Expense (Vendor)</label>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipName>Incurred_Expense_Vendor_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_Venue_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The venue that incurred an expense</description>
        <label>Incurred Expense (Venue)</label>
        <referenceTo>EM_Venue_vod__c</referenceTo>
        <relationshipName>Incurred_Expense_Venue_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_vod__c</fullName>
        <description>The entity that incurred the expense</description>
        <label>Incurred Service Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Simple_Formula_HCPTS__c</fullName>
        <description>Yes/No, based on Payee&apos;s ERS Value</description>
        <formula>TEXT(Payee_Vendor_vod__r.ERS_Simple_HCPTS__c)</formula>
        <inlineHelpText>Yes/No, based on Payee&apos;s ERS Value</inlineHelpText>
        <label>Invoice?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_HCPTS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+LastModifiedById, LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_HCPTS__c</fullName>
        <formula>LastModifiedBy.FirstName &amp; &apos; &apos; &amp;  LastModifiedBy.LastName  &amp; &apos; &apos; &amp; TEXT( LastModifiedDate )</formula>
        <label>Last Modified Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <picklist>
            <picklistValues>
                <fullName>HCPT02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCPT03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCPT01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISVO06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMS23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMS04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMS22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMS25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OriginatingSystemReferenceID_HCPTS__c</fullName>
        <label>OriginatingSystemReferenceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Create_Date_HCPTS__c</fullName>
        <description>PO Create Date</description>
        <label>PO Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payee_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that was paid.</description>
        <label>Payee (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payee_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The attendee that was paid</description>
        <label>Payee (Attendee)</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipName>Payee_Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Service Provider that was paid</description>
        <label>Payee (Service Provider)</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipName>Payee_Speaker_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team member that was paid.</description>
        <label>Payee (Team Member)</label>
        <referenceTo>EM_Event_Team_Member_vod__c</referenceTo>
        <relationshipName>Payee_Team_Member_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Vendor_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor that was paid.</description>
        <label>Payee Lookup</label>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipName>Payee_Vendor_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Venue_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The venue that was paid.</description>
        <label>Payee (Venue)</label>
        <referenceTo>EM_Venue_vod__c</referenceTo>
        <relationshipName>Payee_Venue_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_vod__c</fullName>
        <description>The entity that was paid</description>
        <label>Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date_vod__c</fullName>
        <description>Date the payment was made.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date_vod__c</fullName>
        <description>Date the payment is due</description>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status_HCPTS_S1__c</fullName>
        <inlineHelpText>Payment Requested will trigger the payment to the HCP!
Manual Payment Entry should only be used for documentation only. This will not trigger an interface update.</inlineHelpText>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Payment Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Payment Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant_Code_Name_HCPTS__c</fullName>
        <formula>Event_vod__r.Inherited_Budget_Need_HCPTS__r.Company_Code_HCPTS__r.Plant_Code_HCPTS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_ID_HCPTS__c</fullName>
        <description>BMS ID of person who created the Expense Header</description>
        <formula>CreatedBy.BMS_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Coordinator ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <description>Set by SAP nightly process</description>
        <externalId>true</externalId>
        <inlineHelpText>Set by SAP nightly process</inlineHelpText>
        <label>PO#/Concur ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchase_Org_HCPTS__c</fullName>
        <description>Purchase Org</description>
        <label>SAP Purchase Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Currency_HCPTS__c</fullName>
        <description>This field captures the requested currency of the HCP</description>
        <label>Requested Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Company_Code_HCPTS__c</fullName>
        <description>Company Code from SAP- used to ensure SAP Company Code and the Company Code on the Budget match</description>
        <label>SAP Company Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cost_Center_Code_HCPTS__c</fullName>
        <description>Cost Center Code from SAP- used to ensure SAP Cost Center Code and the Cost Center Code on the Budget match</description>
        <label>SAP Cost Center Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_WBS_Code_HCPTS__c</fullName>
        <description>WBS Code from SAP- used to ensure SAP WBS Code and the WBS Code on the Budget match</description>
        <label>SAP WBS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ID_HCPTS__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Lines_vod__c</fullName>
        <description>Determines if an expense header contains split expense lines or not. If yes, the incurred expense parties are set on the expense lines, rather than the expense header.</description>
        <label>Split Lines?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of payment</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unpaid_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid_in_Full_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial_Payment_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PO Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concur Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concur Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Code_HCPTS__c</fullName>
        <label>Tax Code</label>
        <picklist>
            <controllingField>Tax_Market_HCPTS__c</controllingField>
            <picklistValues>
                <fullName>BA,21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA,20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YA,20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FZ,0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA,20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA,20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA,22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IW,0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA,21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA,22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA,21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EZ,0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA,21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QB,21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG,20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL,23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA,21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ,00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT,21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR,21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Market_HCPTS__c</fullName>
        <label>Tax Market</label>
        <picklist>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_HCPTS__c</fullName>
        <description>Expense Header Title (Activity ID + Speaker Name)</description>
        <formula>Event_vod__r.Activity_ID_2_HCPTS__c &amp; &quot;-&quot; &amp; Contract_Party_Name_2_HCPTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Liable_Simple_HCPTS__c</fullName>
        <formula>TEXT(Payee_Vendor_vod__r.VAT_Liable_HCPTS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the Payee is VAT Liable</inlineHelpText>
        <label>VAT Liable?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_ID_2_HCPTS__c</fullName>
        <formula>Payee_Vendor_vod__r.Vendor_ID_HCPTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Vendor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_ID_HCPTS__c</fullName>
        <formula>Incurred_Expense_Speaker_vod__r.Related_ICF_HCPTS__r.Vendor_HCPTS__r.External_ID_vod__c</formula>
        <label>SAP Vendor ID (from Contract)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Mat_Group_Concat_HCPTS__c</fullName>
        <formula>Payee_Vendor_vod__r.Vendor_Mat_Group_Concat_HCPTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Mat. Group Concat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS_Code_HCPTS__c</fullName>
        <formula>Event_vod__r.Inherited_Budget_Need_HCPTS__r.WBS_Number_HCPTS__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WBS Code</label>
        <type>Text</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_vod__c</columns>
        <columns>Vendor_ID_HCPTS__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Purchase_Order_Number__c</columns>
        <columns>Payment_Due_Date_vod__c</columns>
        <columns>Payee_Account_vod__c</columns>
        <columns>Payee_Vendor_vod__c</columns>
        <columns>Contract_Party_Name_2_HCPTS__c</columns>
        <columns>Created_By_HCTPS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EH-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <recordTypes>
        <fullName>Event_Expense_Header_vod</fullName>
        <active>true</active>
        <description>Event Expense Header</description>
        <label>Event_Expense_Header_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple_Expense_Header</fullName>
        <active>true</active>
        <description>RT for Simplification</description>
        <label>Simple Expense Header</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
    <validationRules>
        <fullName>Cannot_Edit_Expense_Header</fullName>
        <active>true</active>
        <description>Cannot Edit EH if the status has been changed from In Draft</description>
        <errorConditionFormula>AND(
Event_vod__r.RecordType.DeveloperName = &apos;Simple_Activity_HCPTS&apos;,
OR(
ISPICKVAL(PRIORVALUE(Status_vod__c),&quot;PO Requested&quot;),
ISPICKVAL(PRIORVALUE(Status_vod__c),&quot;PO Pending&quot;),
ISPICKVAL(PRIORVALUE(Status_vod__c),&quot;PO Created&quot;)),
OR(
ISCHANGED(Status_vod__c),
ISCHANGED(Payee_vod__c),
ISCHANGED( Incurred_Expense_vod__c),
ISCHANGED( Requested_Currency_HCPTS__c),
ISCHANGED( Actual_vod__c),
ISCHANGED( Event_vod__c),
ISCHANGED(Purchase_Order_Number__c),
ISCHANGED(Committed_vod__c),
ISCHANGED(Expense_Line_Items_Number_HCPTS__c),
ISCHANGED(Material_Group__c)
),
$Profile.Name &lt;&gt;  &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;BMS - Integration User&quot;)</errorConditionFormula>
        <errorMessage>You cannot edit the Expense once it has been Requested.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Expense_Header_after_Payment</fullName>
        <active>true</active>
        <description>Validation Rule to not edit expense header if a payment has been requested.</description>
        <errorConditionFormula>AND(
Event_vod__r.RecordType.DeveloperName = &apos;Simple_Activity_HCPTS&apos;,
OR(
ISPICKVAL(PRIORVALUE( Payment_Status_HCPTS_S1__c),&quot;Payment Requested&quot;),
ISPICKVAL(PRIORVALUE( Payment_Status_HCPTS_S1__c),&quot;Payment Pending&quot;),
ISPICKVAL(PRIORVALUE( Payment_Status_HCPTS_S1__c),&quot;Payment Processed&quot;)),
OR(
ISCHANGED(Payment_Status_HCPTS_S1__c),
ISCHANGED( Tax_Market_HCPTS__c ),
ISCHANGED(  Tax_Code_HCPTS__c )
),
$Profile.Name &lt;&gt;  &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;BMS - Integration User&quot;)</errorConditionFormula>
        <errorMessage>You cannot edit the expense header after the PO has been created and Payment has been requested.</errorMessage>
    </validationRules>
</CustomObject>